--- a/iframe.html
+++ b/iframe.html
@@ -4,6 +4,6 @@
 <title>DevZone Webmail</title>
 </head>
 <body>
-<iframe src="https://mail.devzone.pw/SOGo/index.html" height="100%" width="100%"></iframe>
+<embed src="https://mail.devzone.pw/SOGo/index.html" height="100%" width="100%"/>
 </body>
 </html>
