--- a/iframe.html
+++ b/iframe.html
@@ -4,6 +4,6 @@
 <title>DevZone Webmail</title>
 </head>
 <body>
-<object type="text/html" data="https://mail.devzone.pw/SOGo/index.html" height="100%" width="100%"/>
+<object type="text/html" data="https://mail.devzone.pw/SOGo/" height="100%" width="100%"/>
 </body>
 </html>
