--- a/iframe.html
+++ b/iframe.html
@@ -2,8 +2,21 @@
 <html>
 <head>
 <title>DevZone Webmail</title>
+<style type="text/css">
+body, html
+{
+margin: 0; padding: 0; height: 100%; overflow: hidden;
+}
+
+#content
+{
+position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+}
+</style>
 </head>
 <body>
-<object type="text/html" data="https://mail.devzone.pw/SOGo/" height="100%" width="100%"/>
+<div id="content">
+<iframe width="100%" height="100%" frameborder="0" src="https://mail.devzone.pw/SOGo/" />
+</div>
 </body>
 </html>
